@@ -1,8 +1,8 @@
 Package: Rcgmin2
 Type: Package
 Title: EXPERIMENTAL Conjugate gradient minimization of nonlinear functions with box constraints
-Version: 2018-12.03
-Date: 2018-12-03
+Version: 2018-12.12
+Date: 2018-12-12
 Authors@R: c( person(given = c("John", "C."), family = "Nash", role =
         c("aut", "cre"), email = "nashjc@uottawa.ca") )
 Author: John C. Nash [aut, cre]
