@@ -1,61 +1,0 @@
-source('~/current/1811Rcgmin/Rcgmin2/R/Rcgminb.R', echo=TRUE)
-require(funconstrain)
-rb <- rosen()
-rbf <- rb$fn
-rbg <- rb$gr
-x0 <- rb$x0
-fmin <- rbf(x0)
-cat("f(x0)=", fmin,"\n")
-require(numDeriv)
-gn <- grad(rbf, x0)
-ga <- rbg(x0)
-max(abs(gn-ga))
-source("/home/john/current/1811Rcgmin/cgpkg/R/ctrldefault.R")
-# source("/home/john/current/1811Rcgmin/Rvmminqb.R")
-# source("/home/john/current/1811Rcgmin/cgpkg/R/cgminu.R")
-source("/home/john/current/1811Rcgmin/Rcgmin2/R/Rcgminu.R")
-n <- length(x0)
-ll <- rep(-1000, n)
-uu <- -ll
-mm <- rep(1,n)
-rrtest<-Rcgminu(x0, rbf, rbg,  control=list(trace=4))
-require(funconstrain)
-rb <- rosen()
-rbf <- rb$fn
-rbg <- rb$gr
-x0 <- rb$x0
-fmin <- rbf(x0)
-cat("f(x0)=", fmin,"\n")
-require(numDeriv)
-gn <- grad(rbf, x0)
-ga <- rbg(x0)
-max(abs(gn-ga))
-source("/home/john/current/1811Rcgmin/cgpkg/R/ctrldefault.R")
-# source("/home/john/current/1811Rcgmin/Rvmminqb.R")
-# source("/home/john/current/1811Rcgmin/cgpkg/R/cgminu.R")
-source("/home/john/current/1811Rcgmin/Rcgmin2/R/Rcgminu.R")
-n <- length(x0)
-ll <- rep(-1000, n)
-uu <- -ll
-mm <- rep(1,n)
-rrtest<-Rcgminu(x0, rbf, rbg,  control=list(trace=4))
-require(funconstrain)
-rb <- rosen()
-rbf <- rb$fn
-rbg <- rb$gr
-x0 <- rb$x0
-fmin <- rbf(x0)
-cat("f(x0)=", fmin,"\n")
-require(numDeriv)
-gn <- grad(rbf, x0)
-ga <- rbg(x0)
-max(abs(gn-ga))
-source("/home/john/current/1811Rcgmin/cgpkg/R/ctrldefault.R")
-# source("/home/john/current/1811Rcgmin/Rvmminqb.R")
-# source("/home/john/current/1811Rcgmin/cgpkg/R/cgminu.R")
-source("/home/john/current/1811Rcgmin/Rcgmin2/R/Rcgminu.R")
-n <- length(x0)
-ll <- rep(-1000, n)
-uu <- -ll
-mm <- rep(1,n)
-rrtest<-Rcgminu(x0, rbf, rbg,  control=list(trace=4))
